# admin-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.template  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: awsPush.yml
server/: db.py  main.py  verification.py
server/ai_models/: MockTitanImageGenerator.py  TitanImageGenerator.py  utils.py
server/aws_utils/: __init__.py
server/database/: OrderOperations.py  OrganizationOperation.py  UserOperations.py
server/email_service/: EmailService.py
server/models/: ItemModel.py  OrderByID.py  OrderItemModel.py  OrganizationModel.py  bulkordermodel.py  regeneratemodel.py  reorder.py
server/routers/: __init__.py  admin_dashboard.py  bulk_create.py  order.py  order_info.py  organization.py  prices.py
server/scripts/: orders_base64_bucketMigrate.py  organisation_base64_bucketMigrate.py
server/utils/: format_error.py  generate_vector_ai.py  printful_util.py
