[tool.poetry]
name = "admin-server"
version = "0.1.0"
description = ""
authors = ["rhit-bhuwalk <bhuwalk@rose-hulman.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.5.0"
boto3 = "^1.34.141"
botocore = "^1.34.141"
fastapi = "^0.111.0"
motor = "^3.5.0"
numpy = "^2.0.0"
openai = "^1.35.10"
pydantic = {extras = ["email"], version = "^2.5.3"} 
pydantic-core = "^2.20.1"
pymongo = "^4.8.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
reportlab = "^4.2.2"
requests = "^2.32.3"
sendgrid = "^6.11.0"
starlette = "^0.37.2"
stripe = "^10.2.0"
typing-extensions = "^4.12.2"
uvicorn = "^0.30.1"
xmlsec = "^1.3.14"
opencv-python = "^4.10.0.84"
itsdangerous = "^2.2.0"
email-validator = "^2.2.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
